<!--
secrets.xml resource file should be added to values folder containing:

    - com.twitter.sdk.android.CONSUMER_KEY
    - com.twitter.sdk.android.CONSUMER_SECRET
    - facebook_app_id
    - fb_login_protocol_scheme
    - google_client_id
-->

<resources>
    <string name="app_name">Uni_Tracker</string>

    <string name="continueButtonLabel">Continue</string>
    <string name="completeSetupButtonLabel">Complete Setup</string>
    <string name="displayedPercentageInt">%d %%</string>
    <string name="displayedPercentageDouble">%.2f %%</string>
    <string name="displayedPercentageWithLabel">%.2f %%\n%s</string>

    <string name="configurationActivityTitle">Enter Course Details:</string>
    <string name="configurationActivityUniversityNameHint">University Name</string>
    <string name="configurationActivityYearStartedHint">Year Started</string>
    <string name="configurationActivityCourseLengthHint">Course Length</string>
    <string name="configurationActivityTargetPercentageHint">Target Percentage</string>
    <string name="configurationActivityTotalCreditsHint">Total Credits</string>
    <string name="configurationActivityUniversityNameErrorMessage">University Name must be supplied</string>
    <string name="configurationActivityYearStartedErrorMessage">Year Started must be supplied</string>
    <string name="configurationActivityCourseLengthErrorMessage">Course Length must be supplied</string>
    <string name="configurationActivityTargetPercentageErrorMessage">Target Percentage must be supplied</string>
    <string name="configurationActivityTotalCreditsErrorMessage">Total Credits must be supplied</string>

    <string name="configurationYearWeightingActivityYearSelectHelpMessage">In order to provide accurate grade predictions, we need to know how much each year contributes to your degree classification. Please enter information for each year of your degree below.</string>
    <string name="configurationYearWeightingsTitle">Enter Course Details:</string>
    <string name="configurationYearWeightingActivityYearBeingSelectedMessage">Enter Information For Year:</string>
    <string name="configurationYearWeightingYearBeingSelectedDefaultYear">1</string>
    <string name="configurationYearWeightingActivityYeatWeightingHint">Weighting of Year %</string>
    <string name="configurationYearWeightingActivityCreditsCompletedHint">Credits Completed Within Year</string>
    <string name="coreAppConfigurationTotalCreditsDefault">total_credits</string>
    <string name="coreAppConfigurationTargetPercentageDefault">target_percentage</string>
    <string name="coreAppConfigurationCourseLengthDefault">course_length</string>
    <string name="coreAppConfigurationYearStartedDefault">year_started</string>
    <string name="coreAppConfigurationUniversityDefault">university</string>
    <string name="coreAppConfigurationTotalCreditsLabel">Total Credits</string>
    <string name="coreAppConfigurationTargetPercentageLabel">Target Percentage</string>
    <string name="coreAppConfigurationCourseLengthLabel">Course Length</string>
    <string name="coreAppConfigurationYearStartedLabel">Year Started</string>
    <string name="coreAppConfigurationUniversityLabel">University</string>
    <string name="coreAppConfigurationYearBreakdownLabel">Year Breakdown</string>
    <string name="yearWeightingListItemYearLabel">Year:</string>
    <string name="yearWeightingListItemWeightingLabel">Weighting:</string>
    <string name="yearWeightingListItemCreditsTakenLabel">Credits Taken:</string>
    <string name="yearWeightingListItemDefault">1</string>
    <string name="yearWeightingListItemItemWeightingDefault">100</string>
    <string name="yearWeightingListItemCreditsTakenDefault">240</string>

    <string name="coreAppDashboardRequiredToMeetTargetLabel">Required to meet target:</string>
    <string name="coreAppDashboardRequiredToMeetTargetDefaultValue">-/-</string>
    <string name="coreAppDashboardAverageGradeAchievedLabel">Average grade achieved:</string>
    <string name="coreAppDashboardAverageGradeAchievedDefaultValue">-/-</string>
    <string name="coreAppDashboardRequiredToMeetTargetCompleteKeyword">Complete</string>
    <string name="coreAppDashboardFragmentPercentageDegreeCompletedLabel">Degree completion percentage:</string>

    <string name="individualModuleActivityPercentageCompleteLabel">Percentage complete</string>
    <string name="individualModuleActivityPercentageCompleteDefaultValue">-/-</string>
    <string name="individualModuleActivityCreditsLabel">Credits</string>
    <string name="individualModuleActivityModuleCreditsDefaultValue">-/-</string>
    <string name="individualModuleActivityCurrentGradeLabel">Current grade</string>
    <string name="individualModuleActivityCurrentGradeDefaultValue">-/-</string>

    <string name="recyclerResultListItemResultWeightingPercentageLabel">Weight:</string>
    <string name="recyclerResultListItemResultWeightingPercentageDefaultValue">-/-</string>
    <string name="recyclerResultListItemResultNameDefaultValue">Result Name</string>
    <string name="recyclerResultListItemResultPercentageLabel">Result</string>
    <string name="recyclerResultListItemResultPercentageDefaultValue">-/-</string>

    <string name="addModuleActivityModuleCodeErrorMessage">Module Code must be supplied</string>
    <string name="addModuleActivityModuleNameErrorMessage">Module Name must be supplied</string>
    <string name="addModuleActivityModuleCreditsErrorMessage">Module Credits must be supplied</string>
    <string name="addModuleActivityTitle">Add Module</string>
    <string name="addModuleActivityModuleCodeHint">Module Code</string>
    <string name="addModuleActivityModuleNameHint">Module Name</string>
    <string name="addModuleActivityModuleCreditsHint">Module Credits</string>
    <string name="addModuleActivityYearStudiedLabel">Year Studied:</string>
    <string name="addModuleActivityAddModuleButtonText">Add Module</string>

    <string name="addResultFragmentResultNameErrorMessage">Result Name must be supplied</string>
    <string name="addResultFragmentResultWeightingErrorMessage">Result Weighting must be supplied</string>
    <string name="addResultFragmentResultPercentageErrorMessage">Result Percentage must be supplied</string>
    <string name="addResultFragmentTitle">Add Result</string>
    <string name="addResultFragmentModuleSpinnerLabel">Module:</string>
    <string name="addResultFragmentResultNameHint">Result Name</string>
    <string name="addResultFragmentResultWeightingHint">Result Weighting</string>
    <string name="addResultFragmentResultPercentageHint">Result Percentage</string>
    <string name="addResultFragmentAddResultButtonText">Add Result</string>

    <string name="configurationAddYearWeightingTitle">Add Year Weighting:</string>
    <string name="configurationAddYearWeightingYearNumberHint">Year Number</string>
    <string name="configurationAddYearWeightingYearWeightingHint">Year Weighting</string>
    <string name="configurationAddYearWeightingCreditsCompletedHint">Credits Completed Within Year</string>
    <string name="configurationYearWeightingAddYearButtonText">Add Year</string>

    <string name="deleteItemDialogTitle">Confirm Delete</string>
    <string name="deleteItemDialogMessage">Do you really want to delete %s ?</string>
    <string name="deleteItemDialogSuccessMessageResult">Successfully Deleted Result</string>
    <string name="deleteItemDialogSuccessMessageModule">Successfully Deleted Module</string>
</resources>
