<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/yearWeightingListItemYearLabel"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/yearWeightingListItemYearLabel"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yearWeightingListItemWeightingLabel"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/yearWeightingListItemWeightingLabel"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/yearWeightingListItemCreditsTakenLabel"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toEndOf="@+id/yearWeightingListItemYearLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yearWeightingListItemCreditsTakenLabel"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="108dp"
        android:text="@string/yearWeightingListItemCreditsTakenLabel"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yearWeightingListItemYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/yearWeightingListItemDefault"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearWeightingListItemYearLabel" />

    <TextView
        android:id="@+id/yearWeightingListItemWeighting"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/yearWeightingListItemItemWeightingDefault"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/yearWeightingListItemCreditsTakenLabel"
        app:layout_constraintTop_toBottomOf="@+id/yearWeightingListItemWeightingLabel" />

    <TextView
        android:id="@+id/yearWeightingListItemCreditsTaken"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="152dp"
        android:layout_marginTop="8dp"
        android:text="@string/yearWeightingListItemCreditsTakenDefault"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearWeightingListItemCreditsTakenLabel"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>