<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coreAppDashboardFragmentSwipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.153">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/coreAppDashboardFragmentPercentageRequiredToMeetTargetLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/coreAppDashboardRequiredToMeetTargetLabel"
            android:textColor="@color/textColorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/coreAppDashboardFragmentPercentageRequiredToMeetTarget"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/coreAppDashboardRequiredToMeetTargetDefaultValue"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coreAppDashboardFragmentPercentageRequiredToMeetTargetLabel" />

        <TextView
            android:id="@+id/coreAppDashboardFragmentAverageGradeAchievedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/coreAppDashboardAverageGradeAchievedLabel"
            android:textColor="@color/textColorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coreAppDashboardFragmentPercentageRequiredToMeetTarget" />

        <TextView
            android:id="@+id/coreAppDashboardFragmentAverageGradeAchieved"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/coreAppDashboardAverageGradeAchievedDefaultValue"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coreAppDashboardFragmentAverageGradeAchievedLabel" />

        <TextView
            android:id="@+id/coreAppDashboardFragmentPercentageDegreeCompletedPieChartLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/coreAppDashboardFragmentPercentageDegreeCompletedLabel"
            android:textColor="@color/textColorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coreAppDashboardFragmentAverageGradeAchieved" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/coreAppDashboardFragmentPercentageDegreeCompletedPieChart"
            android:layout_width="330dp"
            android:layout_height="330dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.SwipeRefreshLayout>