<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/individualModuleActivityAppLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/individualModuleActivityModuleCode"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textColor="@color/textColorSecondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/individualModuleActivityAppLogo" />

    <TextView
        android:id="@+id/individualModuleActivityModuleName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/individualModuleActivityModuleCode" />

    <TextView
        android:id="@+id/individualModuleActivityPercentageCompleteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/individualModuleActivityPercentageCompleteLabel"
        android:textAlignment="viewStart"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/individualModuleActivityModuleName" />

    <TextView
        android:id="@+id/individualModuleActivityPercentageComplete"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/individualModuleActivityPercentageCompleteDefaultValue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/individualModuleActivityPercentageCompleteLabel" />

    <TextView
        android:id="@+id/individualModuleActivityModuleCreditsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/individualModuleActivityCreditsLabel"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/individualModuleActivityModuleName" />

    <TextView
        android:id="@+id/individualModuleActivityModuleCredits"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/individualModuleActivityModuleCreditsDefaultValue"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/individualModuleActivityModuleCreditsLabel" />

    <TextView
        android:id="@+id/individualModuleActivityModuleCurrentGradeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/individualModuleActivityCurrentGradeLabel"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/individualModuleActivityModuleName" />

    <TextView
        android:id="@+id/individualModuleActivityModuleCurrentGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/individualModuleActivityCurrentGradeDefaultValue"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/individualModuleActivityModuleCurrentGradeLabel" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/individualModuleActivityModuleResultsList"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/individualModuleActivityModuleCurrentGrade"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>