<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loginActivityAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/configurationActivityTitle"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/universityNameTextInput"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/textColorSecondary"
        android:textColorHint="@color/textColorSecondary"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.UserInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityAppName">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/configurationActivityUniversityName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/configurationActivityUniversityNameHint"
            android:inputType="textCapWords"
            android:textColor="@color/textColorPrimary" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/yearStartedTextInput"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorSecondary"
        android:textColorHint="@color/textColorSecondary"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.UserInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/targetPercentageTextInput">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/configurationActivityYearStarted"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/configurationActivityYearStartedHint"
            android:inputType="numberSigned"
            android:textColor="@color/textColorPrimary" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/targetPercentageTextInput"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorSecondary"
        android:textColorHint="@color/textColorSecondary"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.UserInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/totalCreditsTextInput">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/configurationActivityTargetPercentage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/configurationActivityTargetPercentageHint"
            android:inputType="numberSigned"
            android:textColor="@color/textColorPrimary" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/totalCreditsTextInput"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorSecondary"
        android:textColorHint="@color/textColorSecondary"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.UserInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/universityNameTextInput">

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/continueSetup"
        android:layout_width="325dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_with_border"
        android:text="@string/continueButtonLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>